Address SonarQube feedback